feat(extractor): integrate identifier lexer
Integrate identifier lexer to the main tokenize function. At this point
the lexing part can be considered "complete" and continue to parsing.

--- a/extractor/Makefile
+++ b/extractor/Makefile
@@ -3,3 +3,6 @@ lexer.o: lexer.c lexer.h
 
 trie.o: trie.c trie.h
 	@gcc -o trie.o -c trie.c
+
+util.o: util.c util.h trie.o
+	@gcc -o util.o -c util.c
