--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/libreadtags"]
 	path = libs/libreadtags
 	url = https://github.com/universal-ctags/libreadtags
+[submodule "libs/mustach"]
+	path = libs/mustach
+	url = https://gitlab.com/jobol/mustach
