change cJSON to be included as is instead

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/mustach"]
 	path = libs/mustach
 	url = https://gitlab.com/jobol/mustach
+[submodule "libs/cJSON"]
+	path = libs/cJSON
+	url = https://github.com/DaveGamble/cJSON
