Refactor handle multi lib (#2)
* init refactoring

* Fix missing assignment and regex logic

TODO:
- Fix trailing char on short params
- log level
- log placement

* Fix dangling pointer on params

* Add throw to simplify error and exit

* Fix variadic parameter handle

* Add util for realloc to check result

* Cleanup legacy files

* Add more thorough logging and other lib skeleton's

* handle errno

* add support for json-c

* Add jansson writer

* Confige autoconf to conditionally compile lib

* [fix] flag typo

* [fix] memory leak

---------

Co-authored-by: Matias Alvin <git@matiasalvin.dev>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,20 @@
 bin_PROGRAMS = src/cgentest
 dist_pkgdata_DATA = data/template
-# Implement this for conditional json lib
-# https://stackoverflow.com/questions/1141191/how-do-i-setup-automake-and-autoconf-to-conditionally-build-programs-tests-or-o
-src_cgentest_SOURCES = src/cgentest.c src/cli.c src/ctags_helper.c src/logger.c src/logger.h src/main.c src/mapper.c src/util.c
+
+src_cgentest_SOURCES = src/cgentest.c src/cli.c src/parser.c src/logger.c src/main.c src/util.c
+
+if USE_JSONC
+src_cgentest_SOURCES += src/writer_jsonc.c
+endif
+
+if USE_CJSON
+src_cgentest_SOURCES += src/writer_cjson.c
+endif
+
+if USE_JANSSON
+src_cgentest_SOURCES += src/writer_jansson.c
+endif
+
 AM_CPPFLAGS = -DINSTALLED_TEMPLATE_PATH='"$(pkgdatadir)/template"' -DLOCAL_TEMPLATE_PATH='"$(abs_top_srcdir)/data/template"'
 
 compile_commands.json: Makefile
