--- a/tests/suites/Makefile.am
+++ b/tests/suites/Makefile.am
@@ -1,6 +1,8 @@
 check_PROGRAMS = \
-	util_test
+	util_test \
+	logger_test
 
 util_test_SOURCES = util_test.c $(top_srcdir)/src/logger.c
+logger_test_SOURCES = logger_test.c
 
-AM_CPPFLAGS = -I$(top_builddir)/src -I$(top_srcdir)/src
+AM_CPPFLAGS = -I$(top_builddir)/src -I$(top_srcdir)/src -DFIXTURE_PATH='"$(abs_top_srcdir)/tests/fixtures"'
