--- a/tests/integrations/Makefile.am
+++ b/tests/integrations/Makefile.am
@@ -1,7 +1,18 @@
 check_PROGRAMS = \
-	jsonc_test
+	jsonc_test \
+	cjson_test \
+	jansson_test
 
-jsonc_test_SOURCES = $(top_srcdir)/src/cgentest.c $(top_srcdir)/src/cli.c $(top_srcdir)/src/parser.c $(top_srcdir)/src/logger.c $(top_srcdir)/src/main.c $(top_srcdir)/src/util.c $(top_srcdir)/src/writer_jsonc.c
+INTEGRATIONCORE = $(top_srcdir)/src/cgentest.c $(top_srcdir)/src/cli.c $(top_srcdir)/src/parser.c $(top_srcdir)/src/logger.c $(top_srcdir)/src/main.c $(top_srcdir)/src/util.c
+
+jsonc_test_SOURCES = $(INTEGRATIONCORE) $(top_srcdir)/src/writer_jsonc.c
+jsonc_test_LDADD = -ljson-c
+
+cjson_test_SOURCES = $(INTEGRATIONCORE) $(top_srcdir)/src/writer_cjson.c
+cjson_test_LDADD = -lcjson
+
+jansson_test_SOURCES = $(INTEGRATIONCORE) $(top_srcdir)/src/writer_jansson.c
+jansson_test_LDADD = -ljansson
 
 AM_CPPFLAGS = -I$(top_srcdir) -I$(abs_top_srcdir)
 AM_CPPFLAGS += -DINSTALLED_TEMPLATE_PATH='"$(pkgdatadir)/template"' -DLOCAL_TEMPLATE_PATH='"$(abs_top_srcdir)/data/template"'
